@@ -1111,6 +1111,7 @@ _telli64
 _tempnam
 _tempnam_dbg
 _time32
+time == _time32
 _time64
 _timezone DATA
 _tolower
