@@ -977,8 +977,9 @@ _sys_nerr DATA
 _tell
 _telli64
 _tempnam
-_time32 DATA
+_time32
 _time64
+time == _time64
 _timezone DATA
 _tolower
 _tolower_l
